Fix:  dl layout issues (#322)
Fix: dl layout issues

--- a/manon/description-list-variables.scss
+++ b/manon/description-list-variables.scss
@@ -5,15 +5,14 @@
   /* Description-list */
   --description-list-width: 100%;
   --description-list-max-width: 100%;
-  --description-list-flex-direction: row;
-  --description-list-gap: 0;
 
   /* Description list item */
-  --description-list-item-padding: 0.5rem 1rem;
   --description-list-item-odd-background-color: var(--application-base-tint-1-background-color,
       #f0f0f0);
   --description-list-item-gap: var(--application-base-gap);
   --description-list-item-flex-direction: row;
+  --description-list-item-white-space: initial;
+  --description-list-item-padding: 0.25rem;
 
   /* Description list item title (dt) */
   --description-list-item-title-font-weight: var(--application-base-font-weight);
