--- a/manon/description-list.scss
+++ b/manon/description-list.scss
@@ -12,18 +12,15 @@ dl {
   width: var(--description-list-width, 100%);
   max-width: var(--description-list-max-width);
   margin: 0;
-  display: flex;
-  flex-direction: var(--description-list-flex-direction);
-  flex-wrap: wrap;
-  gap: var(--description-list-gap);
 
   >div {
     display: flex;
     flex-direction: var(--description-list-item-flex-direction);
     gap: var(--description-list-item-gap);
     flex-direction: var(--description-list-flex-direction);
-    padding: 0;
+    padding: var(--description-list-item-padding);
     flex-wrap: wrap;
+    width: 100%;
 
     &:nth-child(odd) {
       background-color: var(--description-list-item-odd-background-color);
@@ -32,10 +29,10 @@ dl {
 
   dt,
   dd {
-    white-space: pre-wrap;
+    white-space: var(--description-list-item-white-space);
     word-break: break-word;
     box-sizing: border-box;
-    padding: var(--description-list-item-padding, 0.5rem 0);
+    padding: var(--description-list-item-padding);
     margin: 0;
     width: calc(50% - (var(--description-list-item-gap) / 2));
   }
